# Nozuru

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
build_scripts/: install_target.sh
makefiles/: build.mk
src/: constants.rs  main.rs  server.rs  updater.rs
