[package]
name = "nozuru"
authors = ["RiceCX"]
repository = "https://github.com/RiceCX/Nozuru.git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0" }
serde_json = { version = "1.0.78", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }